Bug 327878 - KOrginizer failed on saving Korginizer settings
Summary: KOrginizer failed on saving Korginizer settings
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
: 327796 328425 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-20 20:06 UTC by Nick
Modified: 2014-01-20 02:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.75 KB, text/plain)
2014-01-16 13:50 UTC, Andreas Cord-Landwehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nick 2013-11-20 20:06:37 UTC
Application: korganizer (4.11.2)
KDE Platform Version: 4.11.2
Qt Version: 4.8.4
Operating System: Linux 3.11.0-13-generic x86_64
Distribution: Ubuntu 13.10

-- Information about the crash:
- What I was doing when the application crashed:

Korginizer failed when I pressed "Apply" in its settings.
There were several recurring tasks modifications. Guess, this is usefull note as I see the stack in a thread is pointing to hasRecurrenceId().
As DAV source I'm using my own DaviCal instance on a server near me (1 meter or less, direct ethernet link).

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f85095c27c0 (LWP 7183))]

Thread 2 (Thread 0x7f84e568c700 (LWP 7186)):
#0  0x00007f8505c2cf7d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f84fe7866a4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f84fe7867ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f850727aa76 in QEventDispatcherGlib::processEvents (this=0x7f84e00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f850724c5ef in QEventLoop::processEvents (this=this@entry=0x7f84e568bd70, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f850724c8e5 in QEventLoop::exec (this=this@entry=0x7f84e568bd70, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f850714b88f in QThread::exec (this=this@entry=0x2a46d00) at thread/qthread.cpp:542
#7  0x00007f850722dd13 in QInotifyFileSystemWatcherEngine::run (this=0x2a46d00) at io/qfilesystemwatcher_inotify.cpp:265
#8  0x00007f850714df2f in QThreadPrivate::start (arg=0x2a46d00) at thread/qthread_unix.cpp:338
#9  0x00007f84fee4ff6e in start_thread (arg=0x7f84e568c700) at pthread_create.c:311
#10 0x00007f8505c399cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f85095c27c0 (LWP 7183)):
[KCrash Handler]
#6  KCalCore::Incidence::hasRecurrenceId (this=0x0) at ../../kcalcore/incidence.cpp:1035
#7  0x00007f850052c4c2 in EventViews::AgendaView::displayIncidence (this=this@entry=0x246fbe0, aitem=..., createSelected=createSelected@entry=true) at ../../calendarviews/agenda/agendaview.cpp:1664
#8  0x00007f8500532316 in EventViews::AgendaView::fillAgenda (this=0x246fbe0) at ../../calendarviews/agenda/agendaview.cpp:1636
#9  0x00007f8500532124 in EventViews::AgendaView::updateConfig (this=0x246fbe0) at ../../calendarviews/agenda/agendaview.cpp:1270
#10 0x00007f8507f80c39 in KOAgendaView::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at ./koagendaview.moc:96
#11 0x00007f8507261a58 in QMetaObject::activate (sender=sender@entry=0x1f30310, m=m@entry=0x7f85081d9d00 <CalendarView::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#12 0x00007f8507f07000 in CalendarView::configChanged (this=this@entry=0x1f30310) at ./calendarview.moc:627
#13 0x00007f8507f07500 in CalendarView::updateConfig (this=0x1f30310, receiver=...) at ../../korganizer/calendarview.cpp:618
#14 0x00007f8507f1bb49 in CalendarView::qt_static_metacall (_o=0x1f30310, _c=QMetaObject::ReadProperty, _id=99616664, _a=0x7f8505f00748 <main_arena+8>) at ./calendarview.moc:403
#15 0x00007f8507261a58 in QMetaObject::activate (sender=sender@entry=0x3ffd710, m=m@entry=0x7f85026563a0 <KCMultiDialog::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fffc319b2c0) at kernel/qobject.cpp:3539
#16 0x00007f8502436f95 in KCMultiDialog::configCommitted (this=this@entry=0x3ffd710, _t1=...) at ./kcmultidialog.moc:133
#17 0x00007f85024374ca in KCMultiDialogPrivate::apply (this=<optimized out>) at ../../kutils/kcmultidialog.cpp:316
#18 0x00007f8507261a58 in QMetaObject::activate (sender=sender@entry=0x3ffd710, m=m@entry=0x7f85093ff420 <KDialog::staticMetaObject>, local_signal_index=local_signal_index@entry=7, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#19 0x00007f8508f625b3 in KDialog::applyClicked (this=this@entry=0x3ffd710) at ./kdialog.moc:260
#20 0x00007f8508f62c06 in KDialog::slotButtonClicked (this=0x3ffd710, button=8) at ../../kdeui/dialogs/kdialog.cpp:888
#21 0x00007f8508f6457f in KDialog::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at ./kdialog.moc:167
#22 0x00007f8507261a58 in QMetaObject::activate (sender=sender@entry=0x4188de0, m=m@entry=0x7f85075add60 <QSignalMapper::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fffc319b5f0) at kernel/qobject.cpp:3539
#23 0x00007f850726913e in QSignalMapper::mapped (this=this@entry=0x4188de0, _t1=8) at .moc/release-shared/moc_qsignalmapper.cpp:115
#24 0x00007f8507269246 in QSignalMapper::map (this=0x4188de0, sender=0x3bb82e0) at kernel/qsignalmapper.cpp:266
#25 0x00007f8507261a58 in QMetaObject::activate (sender=sender@entry=0x3bb82e0, m=m@entry=0x7f85070bd2a0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fffc319b760) at kernel/qobject.cpp:3539
#26 0x00007f8506c38732 in QAbstractButton::clicked (this=this@entry=0x3bb82e0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#27 0x00007f850699bf73 in QAbstractButtonPrivate::emitClicked (this=this@entry=0x4243c60) at widgets/qabstractbutton.cpp:548
#28 0x00007f850699d0e3 in QAbstractButtonPrivate::click (this=this@entry=0x4243c60) at widgets/qabstractbutton.cpp:541
#29 0x00007f850699d1cc in QAbstractButton::mouseReleaseEvent (this=0x3bb82e0, e=0x7fffc319bc50) at widgets/qabstractbutton.cpp:1123
#30 0x00007f850663a31e in QWidget::event (this=0x3bb82e0, event=0x7fffc319bc50) at kernel/qwidget.cpp:8375
#31 0x00007f85065eadfc in QApplicationPrivate::notify_helper (this=this@entry=0x1d733b0, receiver=receiver@entry=0x3bb82e0, e=e@entry=0x7fffc319bc50) at kernel/qapplication.cpp:4567
#32 0x00007f85065f15ad in QApplication::notify (this=this@entry=0x7fffc319c610, receiver=receiver@entry=0x3bb82e0, e=e@entry=0x7fffc319bc50) at kernel/qapplication.cpp:4110
#33 0x00007f8509000a6a in KApplication::notify (this=0x7fffc319c610, receiver=0x3bb82e0, event=0x7fffc319bc50) at ../../kdeui/kernel/kapplication.cpp:311
#34 0x00007f850724d8bd in QCoreApplication::notifyInternal (this=0x7fffc319c610, receiver=receiver@entry=0x3bb82e0, event=event@entry=0x7fffc319bc50) at kernel/qcoreapplication.cpp:946
#35 0x00007f85065f0d63 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#36 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x3bb82e0, event=event@entry=0x7fffc319bc50, alienWidget=alienWidget@entry=0x3bb82e0, nativeWidget=nativeWidget@entry=0x3ffd710, buttonDown=buttonDown@entry=0x7f85070cf2f8 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#37 0x00007f85066657db in QETWidget::translateMouseEvent (this=this@entry=0x3ffd710, event=event@entry=0x7fffc319bfd0) at kernel/qapplication_x11.cpp:4631
#38 0x00007f8506665079 in QApplication::x11ProcessEvent (this=0x7fffc319c610, event=event@entry=0x7fffc319bfd0) at kernel/qapplication_x11.cpp:3624
#39 0x00007f850668c922 in x11EventSourceDispatch (s=0x1d74120, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#40 0x00007f84fe7863b6 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f84fe786708 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f84fe7867ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007f850727aa55 in QEventDispatcherGlib::processEvents (this=0x1d2db80, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#44 0x00007f850668c9d6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#45 0x00007f850724c5ef in QEventLoop::processEvents (this=this@entry=0x7fffc319c3b0, flags=...) at kernel/qeventloop.cpp:149
#46 0x00007f850724c8e5 in QEventLoop::exec (this=this@entry=0x7fffc319c3b0, flags=...) at kernel/qeventloop.cpp:204
#47 0x00007f8507251e5b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#48 0x00007f85065e934c in QApplication::exec () at kernel/qapplication.cpp:3828
#49 0x0000000000407ddb in main (argc=<optimized out>, argv=<optimized out>) at ../../korganizer/main.cpp:60

Possible duplicates by query: bug 327796, bug 323433.

Reported using DrKonqi
Comment 1 Jekyll Wu 2013-11-21 01:07:27 UTC
*** Bug 327796 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2013-12-06 01:44:58 UTC
*** Bug 328425 has been marked as a duplicate of this bug. ***
Comment 3 Andreas Cord-Landwehr 2014-01-16 13:50:11 UTC
Created attachment 84668 [details]
New crash information added by DrKonqi

kontact (4.11.3) on KDE Platform 4.11.3 using Qt 4.8.6

- What I was doing when the application crashed:

In the agenda view, I selected one occurrence of a recurring event to move it to another time. When clicking at the "Changing Recurring Item" dialog selectint "Only This Item", Kontact crashed.

-- Backtrace (Reduced):
#7  KCalCore::Incidence::hasRecurrenceId (this=0x0) at ../../kcalcore/incidence.cpp:1035
#8  0xaad7dd3d in EventViews::AgendaView::displayIncidence (this=0xc6b1650, aitem=..., createSelected=createSelected@entry=true) at ../../calendarviews/agenda/agendaview.cpp:1726
#9  0xaad84973 in EventViews::AgendaView::fillAgenda (this=this@entry=0xc6b1650) at ../../calendarviews/agenda/agendaview.cpp:1698
#10 0xaad8507a in EventViews::AgendaView::showDates (this=this@entry=0xc6b1650, start=..., end=..., preferredMonth=...) at ../../calendarviews/agenda/agendaview.cpp:1595
#11 0xaad4cec7 in EventViews::EventView::setDateRange (this=0xc6b1650, start=..., end=..., preferredMonth=...) at ../../calendarviews/eventview.cpp:294
Comment 4 Sergio Martins 2014-01-19 15:32:09 UTC
Git commit 963f1360d8c08582a8c1bb2f90c6d039271ca10e by Sergio Martins.
Committed on 19/01/2014 at 15:29.
Pushed by smartins into branch 'KDE/4.12'.

agendaview: Don't crash when reselecting a deleted item.

before fillAgenda() recreates all agenda items it first stores
which one was selected, to re-enable the selection afterwards.

There might be cases where d->mAgenda->lastSelectedItemId() doesnt
exist anymore.

M  +1    -1    calendarviews/agenda/agendaview.cpp

http://commits.kde.org/kdepim/963f1360d8c08582a8c1bb2f90c6d039271ca10e
Comment 5 Sergio Martins 2014-01-19 15:34:19 UTC
This should fix it. It will be in 4.12.2

If it does not, please detail what exactly did you change in settings, and give me detailed steps to reproduce it.
Comment 6 Sergio Martins 2014-01-19 16:44:58 UTC
BUG: doesn't close it anymore ?
Comment 7 Jekyll Wu 2014-01-20 02:18:22 UTC
(In reply to comment #6)
> BUG: doesn't close it anymore ?

It works  as reflected in the editing history[1] . You just didn't refresh the page before setting the 'FIXED-in' field manually, thus overwritting previous status change.

[1] https://bugs.kde.org/show_activity.cgi?id=327878