agendaview: Don't crash when reselecting a deleted item.

before fillAgenda() recreates all agenda items it first stores
which one was selected, to re-enable the selection afterwards.

There might be cases where d->mAgenda->lastSelectedItemId() doesnt
exist anymore.

BUG: 327878